# react-native-radar

./: .eslintrc  .gitignore  .npmignore  .npmrc  CONTRIBUTING.md  LICENSE  MIGRATION.md  NEW_ARCHITECTURE_MIGRATION.md  README.md  Radar.podspec  RadarMotion.podspec  RadarSDKFraud.podspec  RadarSDKMotion.podspec  app.plugin.js  babel.config.js  copyAssets.sh  junit.xml  package-lock.json  package.json  react-native-radar.podspec  react-native-radar.podspec.template  react-native.config.js  set-version.sh  tsconfig.json  withRadar.ts
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
android/: .npmignore  build.gradle  build.gradle.template  gradle.properties  proguard-rules.pro
android/src/main/jni/: CMakeLists.txt  react-native-radar.cpp
example/: .eslintrc  .gitignore  .prettierrc  App.js  App.tsx  App.web.js  app.config.json  app.json  babel.config.js  eas.json  index.js  metro.config.js  package-lock.json  package.json  tsconfig.json
example2/: .eslintignore  package.json
hooks/: pre-commit
ios/: .npmignore  Cartfile.private  Cartfile.resolved  Cartfile.resolved.template  RNRadar+TurboModule.h  RNRadar+TurboModule.mm  RNRadar.h  RNRadar.m  RNRadar.mm  RNRadarTurboModule.h  RNRadarTurboModule.mm  RNRadarUtils.h  RNRadarUtils.m  Radar.h  Radar.mm  RadarMotionStub.swift  RadarSDKFraudStub.m  RadarSDKMotionStub.swift  output.json
js/: definitions.ts  helpers.js  index.d.ts  index.js  index.native.js  index.native.ts  index.ts  index.web.js
plugin/: package.json  tsconfig.json  tsconfig.tsbuildinfo  withRadar.js  withRadarAndroid.js  withRadarIOS.js
scripts/: check-beta-tag.cjs  check-latest-tag.cjs  download-xcframeworks.sh  setup-codegen.js  update-version.js
src/: NativeRadar.ts  helpers.js  index.native.ts  index.ts  index.tsx  index.turbo.ts  index.web.js  index.web.ts  version.ts
test/: index.test.js  (+1 more)
(+240 files in other folders)
